--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -15,12 +15,12 @@ a {
 }
 
 ul {
-  border: 0px;
+  /*border: 0px;
   margin: 0px;
-  padding: 0px;
+  padding: 0px;*/
 }
 
 section {
-  display: block;
+  /*display: block;*/
   padding: 30px;
 }
