--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -4,6 +4,7 @@
 
 #landing {
   text-align: center;
+  display: none;
 }
 
 #landing input, #landing select, #landing option {
@@ -24,40 +25,41 @@
 }
 
 #landing button {
-  padding: 10px 20px;
   background-color: rgba(255, 0, 0, 0.79);
-  border: none;
 }
 
 /* Cloud Tags Search */
 #search {
   padding: 20px;
-  border: 2px solid black;
-  background-color: pink;
+  text-align: center;
 }
 
 .cloud {
-  border-radius: 15px;
-  border: 5px solid black;
+  border-radius: 10px;
   background: rgba(255, 0, 0, 0.79);
   text-align: center;
   list-style: none;
-  margin: 100px;
+  margin: 5px;
   padding: 8px;
-}
-
-#search li {
-  display: inline;
+  display: inline-block;
 }
 
 .time {
   background-color: rgba(0, 113, 188, 0.79);
+  width: 100px;
+  text-align: center;
 }
 
 .day {
   background-color: rgba(0, 146, 69, 0.79);
+  width: 25px;
+  text-align: center;
 }
 
 .genre {
   background-color: rgba(255, 0, 0, 0.79);
+}
+
+#search button {
+  background-color: rgba(0, 113, 188, 0.79);
 }
