--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -4,7 +4,6 @@
 
 #landing {
   text-align: center;
-  display: none;
 }
 
 #landing input, #landing select, #landing option {
@@ -63,3 +62,6 @@
 #search button {
   background-color: rgba(0, 113, 188, 0.79);
 }
+
+
+/* About */
