--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -5,9 +5,11 @@
 }
 
 html, body {
+  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
   background-color: white;
   padding: 0px;
-  margin: 0px;
 }
 
 a {
@@ -22,10 +24,13 @@ ul {
 
 section {
   /*display: block;*/
-  padding: 30px;
+  padding: 20px;
 }
 
 button {
   padding: 10px 20px;
   border: none;
+}
+footer{
+  padding: 1em;
 }
