--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -6,20 +6,87 @@
   text-align: center;
   list-style: none;
   margin: 5px;
-  padding: 8px;
+  padding: 10px 20px 10px 20px;
   display: inline-block;
 }
 
+ .cloud:hover {
+  background: #ff7575;
+  text-decoration: none;
+} 
+
 .time {
-  background-color: rgba(0, 113, 188, 0.79);
+  /* background-color: rgba(0, 113, 188, 0.79);
   width: 200px;
-  text-align: center;
+  text-align: center; */
+  background: #rgba(0, 113, 188, 0.79);
+  background-image: -webkit-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
+  background-image: -moz-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
+  background-image: -ms-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
+  background-image: -o-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
+  background-image: linear-gradient(to bottom, #rgba(0, 113, 188, 0.79), #2980b9);
+  -webkit-border-radius: 24;
+  -moz-border-radius: 24;
+  border-radius: 24px;
+  text-shadow: 1px 1px 3px #2e212e;
+  -webkit-box-shadow: 0px 3px 3px #1c171c;
+  -moz-box-shadow: 0px 3px 3px #1c171c;
+  box-shadow: 0px 3px 3px #1c171c;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.time:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
+  background-image: -moz-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
+  background-image: -ms-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
+  background-image: -o-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
+  background-image: linear-gradient(to bottom, #3cb0fd, #rgba(0, 113, 188, 0.79));
+  text-decoration: none;
 }
 
 .day {
-  background-color: rgba(0, 146, 69, 0.79);
+  /* background-color: rgba(0, 146, 69, 0.79);
   width: 200px;
-  text-align: center;
+  text-align: center; */
+
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
+  /* text-shadow: 4px 1px 3px #2e212e; */
+  -webkit-box-shadow: 0px 3px 3px #1c171c;
+  -moz-box-shadow: 0px 3px 3px #1c171c;
+  box-shadow: 0px 3px 3px #1c171c;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: rgba(0, 146, 69, 0.79);
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.day:hover {
+  background: rgba(0, 146, 69, 0.79);
+  background-image: -webkit-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
+  background-image: -moz-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
+  background-image: -ms-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
+  background-image: -o-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
+  background-image: linear-gradient(to bottom, rgba(0, 146, 69, 0.79), #a9d9b1);
+  text-decoration: none;
+}
+
+#results {
+
+  border-radius: 35px;
+  max-width: 100%;
+  width: 90%;
+  margin: 0 auto;
+  padding: 2em;
+  background-color: paleturquoise;
 }
 
 .genre {
