--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
   padding-top: 5em;
   border-radius: 10px;
-  background-color: red;
+  background-color: gainsboro;
   text-align: center;
 }
 
