--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -55,17 +55,23 @@
   display: flex;
   margin: 1em;
   padding: 2em;
-  flex: row;
+
   justify-content: space-around;
 
 }
 
-.bio {
-  padding: 2em;
+article {
+  display: flex;
 }
 
 .bio {
   width: 100%;
   margin: 0 auto;  
   box-sizing: border-box;
+  padding: 2em;
+}
+
+.bio img {
+  margin: 2em;
+  padding: .8em;
 }
