--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -45,6 +45,8 @@
 
 #search button {
   background-color: rgba(0, 113, 188, 0.79);
+  color: #ffffff;
+  font-size: 20px;
 }
 
 .selected {
@@ -65,7 +67,10 @@ article {
 }
 
 .bio {
-  width: 100%;
+  max-width: 100%;
+  width: 90%;
+  margin: 0 auto;
+  /* width: 100%; */
   margin: 0 auto;  
   box-sizing: border-box;
   padding: 2em;
