--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -2,7 +2,8 @@
 
 .cloud {
   border-radius: 12px;
-  background: rgba(255, 0, 0, 0.79);
+  background: #0071BC;
+  opacity: .79;
   text-align: center;
   list-style: none;
   color: #ffffff;
@@ -13,8 +14,12 @@
   display: inline-block;
 }
 
- .cloud:hover {
-  background: #ff7575;
+.genre {
+  background-color: rgba(255, 0, 0, 0.79)
+}
+
+ .genre:hover {
+  background: #3cb0fd;
   text-decoration: none;
 } 
 
@@ -25,9 +30,9 @@
   background-image: -ms-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
   background-image: -o-linear-gradient(top, #rgba(0, 113, 188, 0.79), #2980b9);
   background-image: linear-gradient(to bottom, #rgba(0, 113, 188, 0.79), #2980b9);
-  -webkit-border-radius: 24;
-  -moz-border-radius: 24;
-  border-radius: 24px;
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
   text-shadow: 1px 1px 3px #2e212e;
   -webkit-box-shadow: 0px 3px 3px #1c171c;
   -moz-box-shadow: 0px 3px 3px #1c171c;
@@ -40,27 +45,22 @@
 }
 
 .time:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
-  background-image: -moz-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
-  background-image: -ms-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
-  background-image: -o-linear-gradient(top, #3cb0fd, #rgba(0, 113, 188, 0.79));
-  background-image: linear-gradient(to bottom, #3cb0fd, #rgba(0, 113, 188, 0.79));
+   background: #3cb0fd;
+   background-image: -webkit-linear-gradient(top, #3cb0fd, rgba(0, 113, 188, 0.79));
+  background-image: -moz-linear-gradient(top, #3cb0fd, rgba(0, 113, 188, 0.79));
+  background-image: -ms-linear-gradient(top, #3cb0fd, rgba(0, 113, 188, 0.79));
+  background-image: -o-linear-gradient(top, #3cb0fd, rgba(0, 113, 188, 0.79));
+  background-image: linear-gradient(to bottom, #3cb0fd, rgba(0, 113, 188, 0.79));  
   text-decoration: none;
 }
 
 .day {
-  /* background-color: rgba(0, 146, 69, 0.79);
-  width: 200px;
-  text-align: center; */
-
   -webkit-border-radius: 12;
   -moz-border-radius: 12;
   border-radius: 12px;
-  /* text-shadow: 4px 1px 3px #2e212e; */
-  -webkit-box-shadow: 0px 3px 3px #1c171c;
+  /* -webkit-box-shadow: 0px 3px 3px #1c171c;
   -moz-box-shadow: 0px 3px 3px #1c171c;
-  box-shadow: 0px 3px 3px #1c171c;
+  box-shadow: 0px 3px 3px #1c171c; */
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
@@ -70,12 +70,7 @@
 }
 
 .day:hover {
-  background: rgba(0, 146, 69, 0.79);
-  background-image: -webkit-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
-  background-image: -moz-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
-  background-image: -ms-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
-  background-image: -o-linear-gradient(top, rgba(0, 146, 69, 0.79), #a9d9b1);
-  background-image: linear-gradient(to bottom, rgba(0, 146, 69, 0.79), #a9d9b1);
+  background: #3cb0fd;
   text-decoration: none;
 }
 
